# Terrain-Editor

./: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  imgui.ini
Shaders/: Dis.comp  Point.fs  Point.vs  paint.comp  shader.fs
src/: Brush.cpp  Brush.h  Camera.cpp  Camera.h  Debug.h  Shader.cpp  Shader.h  imgui.ini  main.cpp
